# minimap

./: .travis.yml  LICENSE  README.md  minimap.py  requirements.txt  setup.cfg  setup.py
minimap/: __init__.py
