[metadata]
name = minimap
description =  "Generate minimaps of your code"
version = 0.1.0
author = Noah Rosamilia
author_email = ivoahivoah@gmail.com
url = https://github.com/Ivoah/minimap
license = MIT
keywords = source, code, image, generate
classifiers =
    License :: OSI approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
install_requires = 
    Pillow==4.2.1
    Pygments==2.2.0
packages = find:

[options.entry_points]
console_scripts = 
    minimap = minimap:main
